--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -2,7 +2,7 @@
     function render_mermaid() {
         mermaid.initialize({
             startOnLoad: false,
-            theme: "default",
+            theme: "sepia",
         });
         window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
     }
